--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             {% get_current_language_bidi as LANGUAGE_BIDI %}
             {% get_current_language as LANGUAGE_CODE %}
             <form  action="{% url 'set_language' %}" method="post">{% csrf_token %}
-                <input name="next" type="hidden" value="/mySubs">
+                <input name="next" type="hidden" value="{% url request.resolver_match.url_name %}">
                 <select style="width: 100%" name="language" onchange="this.form.submit()">
                     {% get_available_languages as LANGUAGES %}
                     {% get_language_info_list for LANGUAGES as languages %}
