--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -106,3 +106,7 @@ button[disabled]{
     width: 100%;
     margin-bottom: 5px;
 }
+.topnav a.active {
+  background-color: #366e63;
+  color: white !important;
+}
