--- a/templates/reportAbsence.html
+++ b/templates/reportAbsence.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "Report Absence" %}{% endblock %}
 {% block content %}
 {% if messages %}
     {% for message in messages %}
