--- a/templates/setSub.html
+++ b/templates/setSub.html
@@ -1,39 +1,21 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load i18n %}
+{% block title %}{% trans "Set Substitution" %}{% endblock %}
 {% block content %}
 <div class="container">
-<form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-        <div class="field">{{ field }}</div>
-    {% endfor %}
-    <input type="submit" value="{% trans "change" %}">
-</form>
+{% if ClassThatNeedsSub > 0 %}
+    <form method="post">
+        {% csrf_token %}
+        {% for field in form %}
+            <div class="field">{{ field }}</div>
+        {% endfor %}
+        <input type="submit" value="{% trans "change" %}">
+    </form>
+{% else %}
+<h1>{% trans "No Classes To Sub" %}</h1>
+{% endif %}
 </div>
-    <script>
-        const ClassSelect = document.getElementById('sub');
-        const TeacherSelect = document.getElementById('teacher');
-
-
-        function changeOptions(event){
-        const selectedClass = ClassSelect.value;
-        const url = `/get/${selectedClass}`;
-        console.log(selectedClass)
-        fetch(url)
-        .then(response => response.json())
-        .then(data => {
-        TeacherSelect.innerHTML = '';
-        console.log(data)
-        data.availableTeachers.forEach((branch) => {
-        const option = document.createElement('option');
-        option.value = branch.id;
-        option.text = branch.name;
-        TeacherSelect.appendChild(option);
-
-        })});
-        }
-        changeOptions()
-        ClassSelect.addEventListener('change', (event) => changeOptions(event))
-    </script>
+    <script src="{% static 'setSub.js' %}"></script>
 {% endblock %}
 
