accidentally didnt include files in last commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html lang={% trans "en" %} dir="{% trans "ltr" %}">
 <head>
+
     {% load static %}
+  <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'sidebar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">
     <meta charset="UTF-8">
