--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,6 +3,8 @@
 <html lang="{% trans "en" %}" dir="{% trans "ltr" %}">
 <head>
  {% load static %}
+      <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+
     <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">    <meta charset="UTF-8">
     <title>{% trans "Login" %}</title>
 </head>
