--- a/templates/publicBase.html
+++ b/templates/publicBase.html
@@ -5,6 +5,7 @@
 
     {% load static %}
     {% block static %}{% endblock %}
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'index.css' %}">
     <meta charset="UTF-8">
