modified so the program works with js being in seperate files

--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -74,5 +74,5 @@
     </tr>
 
 </table>
-<script type="javascript" src="{% static 'timetable.js' %}"></script>
+<script type="text/javascript" src="{% static 'timetable.js' %}"></script>
 {% endblock %}
