--- a/templates/setClasses.html
+++ b/templates/setClasses.html
@@ -88,7 +88,7 @@
         <input type="submit"  value="{% trans "Add Class" %}">
     </form>
 {#    a script to act when the teacher field is changed and get hours where teacher cant teach#}
-    <script src="{% static "setClasses.js" %}"></script>
+    <script type="text/javascript" src="{% static "setClasses.js" %}"></script>
         <style>
         body {
             font-family: Arial, sans-serif;
