--- a/templates/publicBase.html
+++ b/templates/publicBase.html
@@ -3,6 +3,8 @@
 <html lang="{% trans "en" %}" dir="{% trans "ltr" %}">
 <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     {% load static %}
     {% block static %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
