--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -21,6 +21,7 @@
   </div>
 
 </div>
+    <div class="table-container">
 <table>
     <tr id="day-row">
         <th id="empty"></th>
@@ -72,7 +73,9 @@
         <td><div class=timeframe  id="Tuesday-12:45" ></div></td>
         <td><div class=timeframe  id="Wednesday-12:45" ></div></td>
     </tr>
+    
 
 </table>
+        </div>
 <script type="text/javascript" src="{% static 'timetable.js' %}"></script>
 {% endblock %}
