--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="{% trans "en" %}" dir="{% trans "ltr" %}">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
  {% load static %}
       <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
