changed the backend so theres a way to know all classes in order filter by class, put filters in frontend (no function yet)

--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -21,6 +21,30 @@
   </div>
 
 </div>
+    <div class="filtering">
+        <div class="class-filter">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            <input type="checkbox">
+            
+        </div>
+        <select>
+            {% for teacher in teachers  %}
+            <option id="{{ teacher }}">{{ teacher }}</option>
+            {% endfor %}
+        </select>
+    
+    </div>
     <div class="table-container">
 <table>
     <tr id="day-row">
