--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -23,22 +23,23 @@
 </div>
     <div class="filtering">
         <div class="class-filter">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
-            <input type="checkbox">
+            <label for="first-grade">{% trans "first grade" %}</label><input value="1" id="first-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="second-grade">{% trans "second grade" %}</label><input value="2" id="second-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="third-grade">{% trans "third grade" %}</label><input value="3" id="third-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="fourth-grade">{% trans "fourth grade" %}</label><input value="4" id="fourth-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="fifth-grade">{% trans "fifth grade" %}</label><input value="5" id="fifth-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="sixth-grade">{% trans "sixth grade" %}</label><input value="6" id="sixth-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="seventh-grade">{% trans "seventh grade" %}</label><input value="7" id="seventh-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="eighth-grade">{% trans "eighth grade" %}</label><input value="8" id="eighth-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="ninth-grade">{% trans "ninth grade" %}</label><input value="9" id="ninth-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="tenth-grade">{% trans "tenth grade" %}</label><input value="10" id="tenth-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="eleventh-grade">{% trans "eleventh grade" %}</label><input value="11" id="eleventh-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+            <label for="twelfth-grade">{% trans "twelfth grade" %}</label><input value="12" id="twelfth-grade" type="checkbox" class="grades-checkboxes" onClick="filterGrades()">
+
             
         </div>
-        <select>
+        <select onchange="filterTeachers()" id="teacher-select">
+            <option disabled selected value> ---- </option>
             {% for teacher in teachers  %}
             <option id="{{ teacher }}">{{ teacher }}</option>
             {% endfor %}
@@ -102,4 +103,5 @@
 </table>
         </div>
 <script type="text/javascript" src="{% static 'timetable.js' %}"></script>
+<script type="text/javascript" src="{% static 'filters.js' %}"></script>
 {% endblock %}
